# ovrt-sys

./: Cargo.toml  README.md  index.html  index.js  index_workaround.js  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
doc/: search-index.js  settings.html  source-files.js
doc/ovrt_sys/: all.html  fn.__wasm_bindgen_generated_wasm_main.html  fn.main.html  fn.wasm_main.html  index.html  macro.log.html  sidebar-items.js
ovrt_sys/: all.html  fn.__wasm_bindgen_generated_spawn_overlay_callback.html  fn.__wasm_bindgen_generated_wasm_main.html  fn.main.html  fn.spawn_overlay_callback.html  fn.wasm_main.html  index.html  macro.log.html  sidebar-items.js
ovrt_sys/api/: fn.broadcast_message.html  fn.close_overlay.html  fn.get_finger_curls.html  fn.get_monitor_count.html  fn.get_overlay_bounds.html  fn.get_overlay_transform.html  fn.get_overlay_transform_with_callback.html  fn.get_overlay_type.html  fn.get_window_titles.html  fn.refresh.html  fn.send_device_data.html  fn.send_message.html  fn.send_overlay_positions.html  fn.set_browser_title.html  fn.set_contents.html  fn.set_contents_desktop.html  fn.set_contents_website.html  fn.set_contents_window.html  fn.set_keyboard_focus.html  fn.set_overlay_position.html  fn.set_overlay_rotation.html  fn.set_overlay_setting.html  fn.set_overlay_setting_bool.html  fn.set_overlay_setting_f64.html  fn.set_overlay_setting_i32.html  fn.spawn_overlay.html  fn.spawn_overlay_with_callback.html  index.html  sidebar-items.js
ovrt_sys/consts/: enum.Device.html  (+4 more)
pkg/: README.md  ovrt_sys.d.ts  ovrt_sys.js  ovrt_sys_bg.d.ts  ovrt_sys_bg.wasm  package.json
src/: api.rs  consts.rs  events.rs  lib.rs  log.rs  types.rs
(+345 files in other folders)
