[package]
name = "ovrt-sys"
version = "0.1.0"
authors = ["Thiago Machado <swfsql@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
druid = "0.6.0"
console_error_panic_hook = "0.1.6"
serde_json = "1.0.57"
serde_with = "1.4.0"

[dependencies.wasm-bindgen]
version = "0.2.65"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.42"
features = ["console"]

[dependencies.serde]
version = "1.0.114"
features = ["derive"]
